--- a/app/src/main/res/layout/bid_detail_activity.xml
+++ b/app/src/main/res/layout/bid_detail_activity.xml
@@ -860,7 +860,7 @@
                         android:gravity="center|left"
                         android:paddingLeft="10dp"
                         android:textSize="@dimen/txt_sub"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/textColor_deep"
                         android:background="@drawable/bgr_bid_detail_contens1"
                         android:lineSpacingMultiplier="1.5"
                         android:paddingTop="10dp"
@@ -899,7 +899,7 @@
                         android:gravity="center|left"
                         android:paddingLeft="10dp"
                         android:textSize="@dimen/txt_sub"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/textColor_deep"
                         android:background="@drawable/bgr_bid_detail_contens1"
                         android:lineSpacingMultiplier="1.5"
                         android:paddingTop="10dp"
@@ -938,7 +938,7 @@
                         android:gravity="center|left"
                         android:paddingLeft="10dp"
                         android:textSize="@dimen/txt_sub"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/textColor_deep"
                         android:background="@drawable/bgr_bid_detail_contens1"
                         android:lineSpacingMultiplier="1.5"
                         android:paddingTop="10dp"
@@ -978,7 +978,7 @@
                         android:gravity="center|left"
                         android:paddingLeft="10dp"
                         android:textSize="@dimen/txt_sub"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/textColor_deep"
                         android:background="@drawable/bgr_bid_detail_contens2"
                         android:lineSpacingMultiplier="1.5"
                         android:paddingTop="10dp"
