--- a/app/src/main/res/layout/bid_activity.xml
+++ b/app/src/main/res/layout/bid_activity.xml
@@ -96,6 +96,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/btn_set_bid_bid"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
