--- a/app/src/main/res/layout/result_activity.xml
+++ b/app/src/main/res/layout/result_activity.xml
@@ -99,6 +99,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/btn_set_bid_result"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
